2025-10-14  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (git_bundle_pull): check all heads in
        bundle, and try checkout and pull each; if a head
        does not exists in the local repository, create a
        new branch of that name
        (git_bundle_clone): clone the bundle without any
        branch specified

        * inst/tinytest/test_sync__branches.R: add sketch of
        tests

2025-04-10  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (git_info): add function, which
        collects status and other information from
        repositories

2025-03-19  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (git_bundle_create): show name of
        dir to be created when asking for user
        confirmation

2024-11-19  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (git_paths): optionally cache list of
        git paths, since finding them is time-consuming for
        large directories

2024-11-05  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (git_bundle_clone): add default names
        for branches when cloning

2024-10-21  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (create_bundles): pass on 'max.char'

2024-06-03  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (create_bundles): add argument
        "include.only.re" and remove unused "dir.list"

2024-05-28  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'tinytest'

        * inst/tinytest/test_sync.R: add tests

        * R/gitsync.R (pull_from_bundles): fix messages;
        add arguments 'bundle.pattern' and 'ignore.case'
        for selecting bundles

2023-06-20  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (pull_from_bundles): try to get
        branch name from bundle

2023-06-19  Enrico Schumann  <es@enricoschumann.net>

        * R/gitsync.R (pull_from_bundles): no longer use
        branches when cloning